# quickchat-and-vypress-chat-code

qcproto/: Makefile  link.h  p_qchat.h  p_vypress.c  qcs_link.h
qcproto/doc/: api.txt
qcrouter/: README  TODO  autogen.sh  configure.in
qcrouter/doc/: structure.txt
qcrouter/src/: Makefile.am  cfgparser.c  cfgparser.h  common.c  common.h  globals.h  host.c  host.h  localconn.c  localconn.h  msg.c  msg.h  net.c  net.h  pluginconn.c  pluginconn.h  qcrouter.c  routerconn.c  routerconn.h  routetbl.c  routetbl.h  switch.c  switch.h  usercache.c  usercache.h
qcrouter/src/qcproto/: Makefile.am  link.c  p_qchat.c  p_vypress.h  supp.c  supp.h
qcspy/: Makefile  spy.c
vqcc-gtk/: AUTHORS  ChangeLog  Makefile.am  Makefile.mingw  README  TODO  autogen.sh  config.h.in  config.h.mingw  configure.ac  vqcc-gtk.desktop
vqcc-gtk/pixmaps/: Makefile.am  Makefile.mingw  icon_channel.xpm  icon_quote.xpm  icon_quote_button.xpm  icon_reply.xpm  icon_reply_button.xpm  icon_send.xpm  icon_send_button.xpm  icon_status.xpm  icon_user_dead.xpm  icon_user_inactive.xpm  icon_user_normal.xpm
vqcc-gtk/po/: ChangeLog  POTFILES.in  lt.po  ru.po  vqcc-gtk.pot
vqcc-gtk/src/: Makefile.am  Makefile.mingw  cmd_proc.c  cmd_proc.h  gui.c  gui.h  gui_about_dlg.c  gui_about_dlg.h  gui_channel.c  gui_channel.h  gui_config.c  gui_config.h  gui_ignore.c  gui_ignore.h  gui_misc.c  gui_misc.h  gui_msg.c  gui_msg.h  gui_netselect_dlg.c  gui_netselect_dlg.h  gui_page.c  gui_page.h  gui_topic_dlg.c  gui_topic_dlg.h  gui_tray.c  gui_tray.h  gui_tray_win32.c  gui_tray_x11.c  gui_ulist.c  gui_ulist.h  idle.c  idle.h  main.c  main.h  net.c  net.h  prefs.c  prefs.h  sess.c  sess.h  (+8 more)
vqcc-gtk/src/libqcproto/: Makefile.am  Makefile.mingw  link.c  link.h  p_qchat.c  p_qchat.h  p_vypress.c  p_vypress.h  qcproto.h  supp.c  supp.h
vqcc-gtk/src/misc/: Makefile.am
